# linux_driver

./: README.md  version.md
04_led_drv_template_bus_dev_drv/: board_A_led.c  chip_demo_gpio.c  leddrv.c
hello_drv/: .hello_drv.ko.cmd  .hello_drv.mod.o.cmd  .hello_drv.o.cmd  Makefile  hello_drv.c  hello_drv.ko  hello_drv_test  hello_drv_test.c  modules.order
hello_drv/.tmp_versions/: hello_drv.mod
led_drv_device_tree/led_drv/: Makefile  compile_commands.json  imx6ull_gpio.c  imx6ull_led.dtsi  leddrv.c
led_drv_device_tree/led_drv/.cache/clangd/index/: imx6ull_gpio.c.71524C81A738BA9F.idx  imx6ull_gpio.mod.c.625B427B6753947C.idx  led_opr.h.C7A0D01F53B2CEE2.idx  led_resource.h.DFCF0FC0060A0F61.idx  leddrv.c.8712F3232D4AD1AE.idx  leddrv.h.C12D4461A9433579.idx  leddrv.mod.c.6F8F6881F06E9A30.idx
led_drv_device_tree/ledtest/: CMakeLists.txt  compile_commands.json  ledtest.c
led_drv_device_tree/ledtest/.cache/clangd/index/: ledtest.c.BA47415AF6CE9CC6.idx
led_drv_simple/led_drv/: Makefile  led_drv.c
led_drv_simple/ledtest/: CMakeLists.txt  compile_commands.json  ledtest.c
led_drv_simple/ledtest/.cache/clangd/index/: ledtest.c.25F1A7DDE1061E32.idx
led_drv_temp/: Makefile  board_imx6ull.c  compile_commands.json  led_drv.c  led_opr.h
led_drv_temp/.cache/clangd/index/: board_imx6ull.c.1FE2373AF3CDAF48.idx  led_drv.c.CCCC6333C18139B5.idx  led_opr.h.4EC2B07488495E6B.idx
led_drv_temp/ledtest/: compile_commands.json
